--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
         <a id="a2" href="./public/Birthday.html"><img src="./assets/Bday.png" alt="Birthday"></a>
     </ul>
     <hr style="position: relative; top : -250px" />
-    <a id="AboutMe" href="./public/About Me.html">About Me</a>
+    <a id="AboutMe" href="./public/About_Me.html">About Me</a>
 </body>
 </html>
